...
import com.android.wildex.ui.navigation.NavigationTestTags
import com.android.wildex.ui.theme.White
import com.android.wildex.ui.theme.WildexBlack
import com.android.wildex.ui.utils.CountryDropdown

object SignInScreenTestTags {
  const val APP_LOGO = "appLogo"
  const val LOGIN_BUTTON = "loginButton"
  const val WELCOME = "welcome"
  const val LOADING_INDICATOR = "loadingIndicator"
}

/**
 * Composable function representing the Sign-In Screen.
 *
 * @param authViewModel The ViewModel managing the state of the Sign-In Screen.
...
